--- a/CarServicePlanner/wwwroot/css/site.css
+++ b/CarServicePlanner/wwwroot/css/site.css
@@ -1,3 +1,16 @@
+html, body {
+    height: 100%;
+}
+
+body {
+    background-image: url('/img/mojaslika.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+
 html {
   font-size: 14px;
 }
@@ -19,4 +32,13 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+.content-wrapper {
+    background-color: rgba(255, 255, 255, 0.9);
+    border-radius: 0.75rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.25);
 }
