--- a/CarServicePlanner/Views/Shared/_Layout.cshtml
+++ b/CarServicePlanner/Views/Shared/_Layout.cshtml
@@ -34,7 +34,11 @@
                                 Upcoming services
                             </a>
                         </li>
-                        <!-- Ovde kasnije možeš dodavati još sekcija za Servise, Mehaničare itd -->
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="ServiceRecords" asp-action="Index">
+                                Service history
+                            </a>
+                        </li>
 
                     </ul>
                 </div>
