--- a/CarServicePlanner/Views/ServiceRecords/Details.cshtml
+++ b/CarServicePlanner/Views/ServiceRecords/Details.cshtml
@@ -1,54 +1,56 @@
 ﻿@model CarServicePlanner.Models.ServiceRecord
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Service details";
 }
 
-<h1>Details</h1>
+<div class="container mt-4">
+    <div class="card shadow-sm">
+        <div class="card-body">
+            <h2 class="card-title mb-3">Service details</h2>
+            <hr />
 
-<div>
-    <h4>ServiceRecord</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Car)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Car.Brand)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServiceDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServiceDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ServiceType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ServiceType)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MileageAtService)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MileageAtService)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cost)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cost)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Notes)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Notes)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+            <dl class="row mb-4">
+                <dt class="col-sm-3 fw-semibold">Car</dt>
+                <dd class="col-sm-9">
+                    @Model.Car!.Brand @Model.Car.Model (@Model.Car.Year)
+                </dd>
+
+                <dt class="col-sm-3 fw-semibold">Service date</dt>
+                <dd class="col-sm-9">
+                    @Model.ServiceDate.ToString("dd.MM.yyyy")
+                </dd>
+
+                <dt class="col-sm-3 fw-semibold">Service type</dt>
+                <dd class="col-sm-9">
+                    @Model.ServiceType
+                </dd>
+
+                <dt class="col-sm-3 fw-semibold">Mileage at service</dt>
+                <dd class="col-sm-9">
+                    @(Model.MileageAtService?.ToString("N0") ?? "-") km
+                </dd>
+
+                <dt class="col-sm-3 fw-semibold">Cost</dt>
+                <dd class="col-sm-9">
+                    @(Model.Cost.HasValue ? Model.Cost.Value.ToString("0.00") + " €" : "-")
+                </dd>
+
+                <dt class="col-sm-3 fw-semibold">Notes</dt>
+                <dd class="col-sm-9">
+                    @Model.Notes
+                </dd>
+            </dl>
+
+            <div class="d-flex justify-content-between">
+                <a asp-action="Index" class="btn btn-outline-secondary">
+                    Back to service list
+                </a>
+
+                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">
+                    Edit service
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
